datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id            String  @id @default(cuid())
  email         String  @unique
  name          String
  password      String
  emailVerified Boolean @default(false)
  emailToken    String?

  wishes        Wish[]          @relation("AddedBy_Wish")
  receives      Wish[]          @relation("Recipient_Wish")
  gifts         Gifter[]        @relation("User_Gifter")
  sent          WishMessage[]   @relation("FromUser_WishMessage")
  eventMessages EventMessage[]  @relation("FromUser_EventMessage")
  attending     Participation[] @relation("User_Participation")
  managing      Event[]         @relation("Owner_Event")

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?
}

model Participation {
  id      String @id @default(cuid())
  userId  String
  eventId String

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  event Event @relation(name: "Event_UserParticipation", fields: [eventId], references: [id], onDelete: Cascade)
  user  User  @relation(name: "User_Participation", fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, eventId]) // only one participation per user per event
}

model Invitation {
  id      String @id @default(cuid())
  email   String
  eventId String
  status  String @default("PENDING") // "PENDING", "ACCEPTED", "DECLINED"

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  event Event @relation(name: "Event_UserInvitation", fields: [eventId], references: [id], onDelete: Cascade)

  @@unique([email, eventId, status]) // only one invitation per email per event
}

model Event {
  id          String    @id @default(cuid())
  title       String
  description String?
  date        DateTime?
  ownerId     String

  participants Participation[] @relation("Event_UserParticipation")
  invitations  Invitation[]    @relation("Event_UserInvitation")
  wishes       Wish[]          @relation(name: "Event_Wish")
  messages     EventMessage[]  @relation("OnEvent_EventMessage")

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  owner User @relation(name: "Owner_Event", fields: [ownerId], references: [id], onDelete: NoAction)

  @@unique([ownerId, title]) // Each user can only have one event with the same title
}

model Wish {
  id          String  @id @default(cuid())
  recipientId String
  creatorId   String
  eventId     String
  title       String
  description String?
  image       String?
  link        String?
  price       Int?
  order       Int

  giftedBy Gifter[]      @relation("Wish_Gifter")
  messages WishMessage[] @relation("OnWish_WishMessage")

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  recipient User  @relation(name: "Recipient_Wish", fields: [recipientId], references: [id], onDelete: NoAction)
  creator   User  @relation(name: "AddedBy_Wish", fields: [creatorId], references: [id], onDelete: NoAction)
  event     Event @relation(name: "Event_Wish", fields: [eventId], references: [id], onDelete: NoAction)

  @@index([eventId, creatorId, recipientId, createdAt(sort: Desc)]) // Most used query
}

model Gifter {
  id       String  @id @default(cuid())
  wishId   String
  gifterId String
  amount   Int
  bought   Boolean

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  wish   Wish @relation(name: "Wish_Gifter", fields: [wishId], references: [id], onDelete: Cascade)
  gifter User @relation(name: "User_Gifter", fields: [gifterId], references: [id], onDelete: Cascade)

  @@unique([wishId, gifterId])
}

model WishMessage {
  id      String @id @default(cuid())
  fromId  String
  onId    String
  content String

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  from User @relation(name: "FromUser_WishMessage", fields: [fromId], references: [id], onDelete: NoAction)
  on   Wish @relation(name: "OnWish_WishMessage", fields: [onId], references: [id], onDelete: Cascade)
}

model EventMessage {
  id      String @id @default(cuid())
  fromId  String
  onId    String
  content String

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  from User  @relation(name: "FromUser_EventMessage", fields: [fromId], references: [id], onDelete: NoAction)
  on   Event @relation(name: "OnEvent_EventMessage", fields: [onId], references: [id], onDelete: Cascade)
}
