//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  name String [not null]
  password String [not null]
  emailVerified Boolean [not null, default: false]
  emailToken String
  wishes Wish [not null]
  receives Wish [not null]
  gifts Gifter [not null]
  sent WishMessage [not null]
  eventMessages EventMessage [not null]
  attending Participation [not null]
  managing Event [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
}

Table Participation {
  id String [pk]
  userId String [not null]
  eventId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  event Event [not null]
  user User [not null]

  indexes {
    (userId, eventId) [unique]
  }
}

Table Invitation {
  id String [pk]
  email String [not null]
  eventId String [not null]
  status String [not null, default: 'PENDING']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  event Event [not null]

  indexes {
    (email, eventId, status) [unique]
  }
}

Table Event {
  id String [pk]
  title String [not null]
  description String
  date DateTime
  ownerId String [not null]
  participants Participation [not null]
  invitations Invitation [not null]
  wishes Wish [not null]
  messages EventMessage [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  owner User [not null]

  indexes {
    (ownerId, title) [unique]
  }
}

Table Wish {
  id String [pk]
  recipientId String [not null]
  creatorId String [not null]
  eventId String [not null]
  title String [not null]
  description String
  image String
  link String
  price Int
  order Int [not null]
  giftedBy Gifter [not null]
  messages WishMessage [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  recipient User [not null]
  creator User [not null]
  event Event [not null]
}

Table Gifter {
  id String [pk]
  wishId String [not null]
  gifterId String [not null]
  amount Int [not null]
  bought Boolean [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  wish Wish [not null]
  gifter User [not null]

  indexes {
    (wishId, gifterId) [unique]
  }
}

Table WishMessage {
  id String [pk]
  fromId String [not null]
  onId String [not null]
  content String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  from User [not null]
  on Wish [not null]
}

Table EventMessage {
  id String [pk]
  fromId String [not null]
  onId String [not null]
  content String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  from User [not null]
  on Event [not null]
}

Ref: Participation.eventId > Event.id [delete: Cascade]

Ref: Participation.userId > User.id [delete: Cascade]

Ref: Invitation.eventId > Event.id [delete: Cascade]

Ref: Event.ownerId > User.id [delete: No Action]

Ref: Wish.recipientId > User.id [delete: No Action]

Ref: Wish.creatorId > User.id [delete: No Action]

Ref: Wish.eventId > Event.id [delete: No Action]

Ref: Gifter.wishId > Wish.id [delete: Cascade]

Ref: Gifter.gifterId > User.id [delete: Cascade]

Ref: WishMessage.fromId > User.id [delete: No Action]

Ref: WishMessage.onId > Wish.id [delete: Cascade]

Ref: EventMessage.fromId > User.id [delete: No Action]

Ref: EventMessage.onId > Event.id [delete: Cascade]